WIP: fixing volume alignment

--- a/css/main.css
+++ b/css/main.css
@@ -384,19 +384,21 @@ body.waiting * {
 
 #svg-coronal-container-inner {
     background-image: url("/data/volumes/coronal-0264.jpg");
-    background-position-x: center;
-    background-position-y: 23px;
-    background-size: 93% 84%;
+    background-position-x: 41%;
+    background-position-y: 80%;
+    background-size: 103% 90%;
     background-repeat: no-repeat;
 }
 
-#svg-coronal-container svg {
-    /* opacity: .75; */
-}
+#svg-coronal-container svg {}
 
 #svg-coronal-container svg path {
-    fill: none;
-    stroke: #aaa;
+    fill-opacity: 0%;
+    stroke: #fff;
+}
+
+#svg-coronal-container svg path:hover {
+    /* stroke-width: 1px; */
 }
 
 
